--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "CompFin"
 uuid = "77e9c7f1-ece3-499b-8a73-a7d0559a2ca7"
 authors = ["martingale <124511455+martingale-2910@users.noreply.github.com>"]
 version = "0.1.0"
+
+[deps]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
